# Grupo1taller2appServer

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  install.sh
doc/: Makefile  app-server.yml  make.bat
doc/source/: conf.py  index.rst
src/: serverapp.cpp
src/DB/: DBManager.cpp  DBManager.h  Track.cpp  Track.h
src/mongoose/: Makefile  RestServer.cpp  RestServer.h  api_server.c  unit_test.sh
src/restserver/: Config.h  Controller.cpp  Controller.h  ControllerManager.cpp  ControllerManager.h  GetTrackController.cpp  GetTrackController.h  NotFoundResponse.cpp  NotFoundResponse.h  Request.cpp  Request.h  Response.cpp  Response.h  RestServer.cpp  RestServer.h  UserLoginValidator.cpp  UserLoginValidator.h
src/utils/: Utils.cpp  Utils.h
test/: CMakeLists.txt  checkCoverage.sh  restApiTest.sh  test.cpp
test/restApi/: testGetTrack.py  testNotFound.py
